// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`WithAuth component (page access guard) Renders content if user is logged in and has role access 1`] = `
<body>
  <div>
    Special content
  </div>
</body>
`;

exports[`WithAuth component (page access guard) Renders empty content while the session is being retrieved 1`] = `
<body>
  <div />
</body>
`;
